# vortex.email

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  TODO.md  bun.lockb  nixpacks.toml  package.json
.github/workflows/: check-frontend.yml  check-rust.yml  check.yml  claude.yml  publish-to-ghcr.yml  smtp-fuzz.yml
Copyleft/: smtp-fuzz.pl
crates/vortex-server/: Cargo.toml
crates/vortex-server/src/: main.rs
crates/vortex-smtp/: Cargo.toml
crates/vortex-smtp-server/: Cargo.toml
crates/vortex-smtp-server/src/: main.rs
crates/vortex-smtp/src/: consts.rs  esmtp.rs  event.rs  lib.rs  messages.rs
frontend/: .gitignore  .prettierignore  biome.json  bun.lockb  package-lock.json  package.json  react-router.config.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.workspace.ts
frontend/app/: app.css  app.d.ts  email.ts  root.tsx  routes.ts
frontend/app/components/home/: email.tsx  turnstile-manager.tsx
frontend/app/components/layout/: footer.tsx  header.tsx
frontend/app/routes/: about.tsx  credits.tsx  home.test.tsx  home.tsx  legal.tsx  privacy.tsx  submissions.tsx  support-the-project.tsx  terms.tsx
frontend/app/utils/: links.ts  main.ts
frontend/public/: site.webmanifest  sitemap.xml
frontend/src/: app.d.ts  app.html  hooks.client.ts  hooks.server.ts
frontend/src/lib/: email.ts  mailbox.ts  util.ts
frontend/src/lib/components/: Header.svelte
frontend/src/lib/components/mailbox/: Email.svelte  Mailbox.svelte
frontend/src/lib/stores/: mailbox.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/credits/: +page.svelte
frontend/src/routes/donate/: +page.svelte
frontend/src/routes/sentry/: +page.svelte
src/: consts.rs  main.rs  messages.rs
