[package]
name = "vortex-server"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
color-eyre = "0.6.3"
email-address-parser = "2.0.0"
sentry = { version = "0.37.0", features = ["tracing"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.40"
vortex-smtp = { path = "../vortex-smtp" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
sentry-tracing = "0.37.0"
redis = { version = "0.29.5", features = [
    "tokio-native-tls-comp",
    "tls-native-tls",
] }
serde_json = "1.0.140"
tower_governor = "0.7.0"
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22.1"
urlencoding = "2.1.3"


[lints]
workspace = true
