[package]
name = "vortex-smtp"
version = "0.2.0"
edition = "2021"

[dependencies]
const_format = "0.2.32"
tokio = { version = "1.37.0", features = ["net", "io-util"] }
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
nanoid = "0.4.0"

[lints]
workspace = true
